--- a/css/foro.css
+++ b/css/foro.css
@@ -14,7 +14,6 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: left;
     color: cornflowerblue;
-
 }
 
 .menu{
@@ -48,6 +47,30 @@ article{
     padding: 20px;
     margin-bottom: 25px ;
     background-color: violet;
+}
+.referencias {
+    border: 1px solid black;
+    width: 200px;
+    float: left; 
+    margin-top: 200px; 
+    margin-left: 20px;      
+
+}
+
+
+article footer{
+    text-align: right;
+   
+}
+
+.pie{
+    clear: left;
+
+}
+
+article img{
+    width: 200px;
+    height: 200px;
 }
 /*
 h1, h2, h3, h4, h5, h6{
